# mini-research-claw

./: .env.example  .gitignore  Dockerfile  Dockerfile.sandbox  Mini_Research_Claw_Full_Plan.md  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  pyproject.toml  requirements.txt
backend/: __init__.py  config.py  graph.py  main.py  state.py
backend/agents/: __init__.py  academic_writer.py  arxiv_retriever.py  claim_ledger_builder.py  critique_aggregator.py  critique_panel.py  dependency_resolver.py  deterministic_linter.py  executor.py  experiment_designer.py  hitl_experiment_gate.py  hitl_gate.py  hypothesis_generator.py  kg_extractor.py  latex_compiler.py  ml_coder.py
backend/utils/: __init__.py  artifact_uploader.py  claim_utils.py  docker_utils.py  embeddings.py  kg_utils.py  latex_utils.py  llm_utils.py  state_pruning.py  supabase_client.py
docs/: IMPLEMENTATION_GUIDE.md
papers/: README.md
src/: App.jsx  index.css
src/components/: LogPanel.jsx  PipelineStepper.jsx  Sidebar.jsx  StatCard.jsx
src/pages/: Dashboard.jsx  History.jsx  Logs.jsx  NewResearch.jsx  Settings.jsx
supabase/migrations/: 0001_initial_schema.sql
